--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.38.1"
+    "react-hook-form": "^7.13.0",
+    "react-toastify": "^7.0.4",
+    "sass": "^1.38.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^16.7.2",
