--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.0",
+    "axios": "^0.21.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
