--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
+    "react-icons": "^4.2.0",
     "react-toastify": "^7.0.4",
     "sass": "^1.38.1",
     "yup": "^0.32.9"
