--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
     "react-toastify": "^7.0.4",
+    "react-toggle": "^4.1.2",
     "sass": "^1.38.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^16.7.2",
     "@types/react": "^17.0.19",
+    "@types/react-toggle": "^4.0.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "^4.3.5"
